# Tails-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REFACTORING_SUMMARY.md  REFACTOR_PLAN.md  add_method.py  add_regexp_method.py  express.js  http.ts  package.json  reproduce_redactor_json.ts  zod.ts  zod_full.ts
.github/workflows/: benchmarks.yml  ci.yml  release.yml
.mimocode/plans/: 1783040099834-jolly-comet.md
benches/: runtime.rs  safe_wrappers.rs
benchmarks/: README.md  runner.sh
benchmarks/baselines/: REFERENCE.md
benchmarks/fixtures/: medium.json  medium_file.txt
benchmarks/suites/async/: async_await.js  promises.js
benchmarks/suites/builtins/: array_push.js  date.js  json_parse.js  map_set.js  promise_chain.js  regexp.js  string_concat.js
benchmarks/suites/core/: closures.js  generators.js  loops.js  oo.js
benchmarks/suites/io/: _test_http.js  fetch.js  fs_read_sync.js  fs_write_sync.js  http_server.js
benchmarks/tools/: aggregate.py  average.js  generate_fixtures.js  report.js
docs/: PERFORMANCE_PLAN.md  PERF_PLAN_PHASE7.md  PERF_PLAN_PHASE8.md  UNSAFE_AUDIT_PLAN.md  architecture.md  features.md  installation.md  native-modules.md  plan-native-table-constants.md  roadmap.md  testing.md  unsafe-code-guide.md  usage.md
examples/: __dirname.ts  all_features.ts  async-patterns.ts  child-process.ts  commonjs-require.ts  custom_runtime.rs  fs-promises.ts  fs-streams-watch.ts  greeter.ts  http-server.ts  math_utils.ts  modular_demo.ts  object_example.ts  simple-native.ts  test-builtins.ts  test-fs-only.ts  test-native-modules.ts  use-native-module.ts  websocket-client.ts  zod-validator.ts
examples/cjs/: counter.cjs  greeter.cjs  math.cjs
examples/plugins/: loader.ts  main.ts  plugin_manager.ts  test_all_plugins.ts  types.ts  validation.ts
examples/plugins/plugins/: counter.ts  time.ts
examples/public/: app.js  index.html  style.css
examples/roadmap/: bigint_fib.ts  class_proxies.ts  intl.ts  regex_unicode.ts
modules/abi/: Cargo.toml  build.rs
modules/abi/src/: lib.rs  loader.rs  module.rs  traits.rs
modules/fs/: Cargo.toml
modules/fs-promises/: Cargo.toml
modules/fs-promises/src/: lib.rs
modules/fs/src/: lib.rs
modules/http/: Cargo.toml
modules/http/src/: lib.rs
modules/my-tails-module/: Cargo.toml  build.rs  my-tails-module.d.ts
modules/my-tails-module/src/: lib.rs
modules/native-macros/: Cargo.toml
modules/native-macros/src/: class.rs  dts.rs  function.rs  lib.rs  module.rs  types.rs
modules/net/: Cargo.toml
modules/net/src/: lib.rs
modules/os/: Cargo.toml
modules/os/src/: lib.rs
modules/path/: Cargo.toml
modules/path/src/: lib.rs
modules/process/: Cargo.toml
modules/process/src/: lib.rs
modules/tails-validator/: Cargo.toml  tails-validator.d.ts
modules/tails-validator/src/: engine.rs  formats.rs  helpers.rs  lib.rs  types.rs
modules/websocket/: Cargo.toml
modules/websocket/src/: lib.rs
scripts/: check_unsafe_allowlist.sh
src/: dotenv.rs  lib.rs  main.rs  runtime.rs
src/cli/: build.rs  test.rs
src/compiler/: ast.rs  bytecode.rs  lexer.rs  mod.rs  parser.rs
src/compiler/bytecode/: closures.rs  expressions.rs  mod.rs  stmt_class.rs  stmt_control_flow.rs  stmt_function.rs  stmt_module.rs  stmt_try_catch.rs
src/compiler/lexer/: mod.rs  token.rs
src/compiler/parser/: expressions.rs  mod.rs  program.rs  statements.rs  types.rs
src/compiler/type_checker/: compatibility.rs  expressions.rs  mod.rs  narrowing.rs  operators.rs  statements.rs
src/errors/: mod.rs  runtime_errors.rs  type_errors.rs
src/ffi/: conversions.rs  macros.rs  mod.rs  native.rs  safe_wrappers.rs
src/objects/: display.rs  eq.rs  hash.rs  js_array.rs  js_collections.rs  js_date.rs  js_date_calendar.rs  js_number.rs  js_promise.rs  js_proxy.rs  mod.rs  safe_typed_array.rs  strings.rs
src/runtime_env/: async_runtime.rs  builtins.rs  modules.rs  native_fns.rs  weak_refs.rs
src/runtime_env/native_fns/: array_fns.rs  assert_fns.rs  buffer_fns.rs  child_process_fns.rs  collection_fns.rs  console.rs  constants.rs  crypto_fns.rs  date_fns.rs  dns_fns.rs  encoding_fns.rs  error_fns.rs  events_fns.rs  fetch_fns.rs  fs_fns.rs  function_fns.rs  generator_fns.rs  global_fns.rs  helpers.rs  http_fns.rs  intl_fns.rs  iterator_fns.rs  json_fns.rs  math_fns.rs  mod.rs  net_fns.rs  number_fns.rs  object_fns.rs  os_fns.rs  path_fns.rs  process_fns.rs  promise_fns.rs  querystring_fns.rs  reflect_fns.rs  regexp_fns.rs  require_fns.rs  stream_fns.rs  string_fns.rs  symbol_fns.rs  timers_fns.rs  (+6 more)
src/vm/: gc.rs  interpreter.rs  mod.rs  well_known.rs
src/vm/interpreter/: builtins.rs  bytecode.rs  call_frame.rs  calls.rs  class_ops.rs  collection_ops.rs  control_flow.rs  error_format.rs  exception_handling.rs  exec_calls.rs  function_ops.rs  heap_types.rs  instructions.rs  mod.rs  (+9 more)
tests/: all_features.rs  api_completeness_v050.rs  async.rs  buffer.rs  bytecode_debug.rs  child_process_module.rs  classes.rs  cli.rs  conformance_runner.rs  crypto_module.rs  debug_module.rs  destructuring.rs  encoding.rs  error_handling.rs  error_stack.rs  events_module.rs  for_of_clobber.rs  for_of_try_catch.rs  fs_module.rs  fs_promises_module.rs  fuzz.rs  gc.rs  http_module.rs  intl.rs  jit.rs  module_debug.rs  modules.rs  new_features.rs  object_accessors.rs  optional_chaining.rs  os_module.rs  path_module.rs  phase1_features.rs  phase2_features.rs  phase3_features.rs  process_global.rs  process_native_module.rs  proxy.rs  require_cjs.rs  roadmap_features.rs  (+5 more)
tests/all_features/: async_.rs  classes.rs  control_flow.rs  errors_globals.rs  functions.rs  iterators_generators.rs  main.rs  modules.rs  objects_collections.rs  strings_math_json.rs  variables.rs
tests/common/: mod.rs
tests/fixtures/: validate.ts
tests/harness/: assert.ts  embedded-harness.ts  mod.ts  runner.ts  runtime-bridge.ts  simple-harness.ts  state.ts  suite.ts  types.ts  utils.ts
tests/integration/: modules.rs
tests/test/: example.test.ts  fastify-runtime.test.ts  zod-compat-bugs.test.ts  zod-compat.test.ts  zod-runtime.test.ts
tests/unit/: lexer.rs  parser.rs  vm.rs
(+68 files in other folders)
