[workspace]
members = [".", "modules/abi", "modules/native-macros", "modules/tails-validator", "modules/fs", "modules/fs-promises", "modules/path", "modules/process", "modules/os", "modules/websocket", "modules/http", "modules/net"]

[package]
name = "tails-rs"
version = "0.1.0"
edition = "2021"
description = "A TypeScript-first runtime in Rust"
license = "MIT"
# Disable auto-discovery of src/bin/* so release/bench builds do not
# LTO-link dump_new / test_promise on every cargo bench.
autobins = false

[features]
default = ["fs", "fs-promises", "path", "process", "os", "websocket", "http", "net", "zlib", "tls", "dns", "jit"]
fs = ["dep:tails-fs"]
fs-promises = ["dep:tails-fs-promises", "dep:tails-fs"]
path = ["dep:tails-path"]
process = ["dep:tails-process"]
os = ["dep:tails-os"]
websocket = ["dep:tails-websocket"]
http = ["dep:tails-http"]
net = ["dep:tails-net"]
zlib = ["dep:flate2", "dep:base64"]
tls = ["dep:native-tls"]
dns = ["dep:hickory-resolver"]
# Baseline JIT for hot loops (executable memory — inherent unsafe).
jit = []
# Optional SIMD JSON parse path (uses simd_json::from_str which is unsafe).
# Default JSON.parse uses fully safe serde_json.
fast-json = []
# Opt-in debug binaries under src/bin/ (not built by default).
dev-bins = []

[lib]
name = "tails"
path = "src/lib.rs"

[[bin]]
name = "tails"
path = "src/main.rs"

# Dev-only helpers (build explicitly: cargo run --bin dump_new)
[[bin]]
name = "dump_new"
path = "src/bin/dump_new.rs"
required-features = ["dev-bins"]

[[bin]]
name = "test_promise"
path = "src/bin/test_promise.rs"
required-features = ["dev-bins"]

[dependencies]
tails-abi = { path = "modules/abi" }
tails-fs = { path = "modules/fs", optional = true }
tails-fs-promises = { path = "modules/fs-promises", optional = true }
tails-path = { path = "modules/path", optional = true }
tails-process = { path = "modules/process", optional = true }
tails-os = { path = "modules/os", optional = true }
tails-websocket = { path = "modules/websocket", optional = true }
tails-http = { path = "modules/http", optional = true }
tails-net = { path = "modules/net", optional = true }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Memory & Performance
bumpalo = "3.14"
rustc-hash = "1.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = { version = "0.17", features = ["serde_impl"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
fancy-regex = "0.14"
regex = "1"

# File watching
notify = "8"

# Testing/Tooling
object_store = "0.14.0"

# FFI Support
libc = "0.2"
libloading = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["blocking", "json"] }

# URL parsing
url = "2"
urlencoding = "2"

# Crypto
getrandom = "0.2"
sha2 = "0.10"

# Compression (zlib)
flate2 = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

# TLS
native-tls = { version = "0.2", optional = true }

# DNS
hickory-resolver = { version = "0.24", optional = true }

# Terminal colors
colored = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_System_Memory"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

# Benches inherit release by default; full LTO + codegen-units=1 makes
# `cargo bench` appear to hang (multi-minute link of lib + bins + criterion).
# Keep opt-level=3 but skip fat LTO so benches actually compile and run.
[profile.bench]
inherits = "release"
lto = false
codegen-units = 16
strip = false
debug = false

[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "safe_wrappers"
harness = false

[[test]]
name = "unit_parser"
path = "tests/unit/parser.rs"

[[test]]
name = "unit_lexer"
path = "tests/unit/lexer.rs"

[[test]]
name = "unit_vm"
path = "tests/unit/vm.rs"

[[test]]
name = "unit_minified"
path = "tests/unit/minified.rs"

[[test]]
name = "conformance_runner"
path = "tests/conformance_runner.rs"

