[package]
name = "tails-fs-promises"
version = "0.1.0"
edition = "2021"
description = "Tails native fs/promises module (Promise-based file system API)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tails-abi = { path = "../abi" }
tails-native-macros = { path = "../native-macros" }
tails-fs = { path = "../fs" }
serde_json = "1"