[package]
name = "tails-os"
version = "0.1.0"
edition = "2021"
description = "Tails native os module"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tails-abi = { path = "../abi" }
tails-native-macros = { path = "../native-macros" }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["hostname", "user", "process"] }
