[package]
name = "tails-validator"
version = "0.1.0"
edition = "2021"
description = "Zod-like validation library for Tails native modules"

[lib]
crate-type = ["cdylib"]

[dependencies]
tails-abi = { path = "../abi" }
tails-native-macros = { path = "../native-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fancy-regex = "0.14"
