[package]
name = "tails-websocket"
version = "0.1.0"
edition = "2021"
description = "Tails native websocket module"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tails-abi = { path = "../abi" }
tails-native-macros = { path = "../native-macros" }
once_cell = "1"
tokio-tungstenite = "0.24"
tungstenite = "0.24"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde_json = "1"